Fix scrollbar positioning issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,14 +15,9 @@ Root Properties
 HTML Properties
 *************
 */
-body {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale; 
-    text-rendering: optimizeLegibility;
-    text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
-}
 
 html, body {
+    // scrollbar-width: none;
     padding: 0 0 0 0;
     margin: 0;
     font-family: 'Rubik', 'Roboto', sans-serif, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, 
@@ -32,6 +27,11 @@ html, body {
 }
 
 body {
+    overflow-y: scroll;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; 
+    text-rendering: optimizeLegibility;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
     max-width: 60%;
     margin: auto;
     transition: max-width 0.2s;
